--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,10 +35,20 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   get: ^4.3.8
+  
 
+
+  
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  flutter_launcher_icons: ^0.9.2
+flutter_icons:
+  android: true
+  ios: true
+  image_path: "assets/icons/icons_quiz.png"
+  adaptive_icon_background: "#ffffff"
+  adaptive_icon_foreground: 'assets/icons/foreground_icon.png'
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
